2011-03-06  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* config/watcom/.cvsignore: Set up list of files to be ignored.

  	* config/watcom/Makefile (clean): Remove GIF help files.

	* config/watcom/Makefile (wgnuplot_pipes.exe, gnuplot.exe): Add
	missing library msimg32.

2011-03-05  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* config/makefile.nt (OPTIONS, LDFLAGS, TERMFLAGS): Grouped for
	easier disabling of optional terminals (gd, pdf, wx).
	(gnuplot.exe): Change name of console gnuplot to the common one.
	Drop wgnuplot_pipes.exe in the process.
	(pgnuplot.exe): Re-use this name for the original program that had it.
	(HCWPATH): New.  Help compiler need not be on PATH.
	($(HELPFILE)): USE $(HCWPATH).
	(CC): Remove /c option.  Put that into calls that only compile,
	instead.  Allows to use $(CC) instead of verbatim "cl" in more
	places.
	(LDFLAGS): Remove /subsystem option.  Put it into calls instead,
	because it's different for different builds.
	(CBASEFLAGS): Adapted to current version of MSVC.
	(O): Missing macro needed for makefile.all.
	(linkopt1.msw, gnuplot.exe): Add recently needed library msimg32.

2011-03-03  Peter Hedwig <peter@affenbande.org>

	* term/lua.trm:  If the cairo terminal is not available to make a
	bitmap image, use libgd instead.

2011-02-28  Ethan A Merritt  <merritt@u.washington.edu>

	* docs/gnuplot.doc docs/plotstyles.gnu:  Add a polar-mode example
	to the set of plotting style figures (even though it is not really
	a "plot style").

2011-02-28  Bastian Maerkisch  <bmaerkisch@web.de>

	* docs/xref.c (refs): Only emit start and stop strings if we
	write any items at all.
	
	Request by Mojca Miklavec
	* docs/windows/doc2html.c: Include list of subtopics. Optionally
	use hard links instead of index lookup (HTML_HARDLINKS).
	
	Feature Request #874572
	* term/win.trm src/win/wgraph.c src/win/wgnuplib.h 
	src/win/wresourc.h: Add double buffering to the windows terminal 